[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Cards/sAttackIncrease.png" type="Texture" id=1]
[ext_resource path="res://Assets/Cards/sHealthIncrease.png" type="Texture" id=2]
[ext_resource path="res://Assets/Cards/sSpeedIncrease.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Sometimes.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/UI/CardSelector.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="Animation" id=5]
resource_name = "AttackIncreaseHover"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.32, 0.32 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 109, 205 ), Vector2( 101, 189 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "AttackIncreaseHoverOff"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 101, 189 ), Vector2( 109, 205 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.32, 0.32 ), Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 109, 205 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "HealthIncreaseHover"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 437, 205 ), Vector2( 429, 189 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.32, 0.32 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "HealthIncreaseHoverOff"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 429, 189 ), Vector2( 437, 205 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.32, 0.32 ), Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 437, 205 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 765, 205 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "SpeedIncreaseHover"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 765, 205 ), Vector2( 757, 189 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.32, 0.32 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "SpeedIncreaseHoverOff"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.32, 0.32 ), Vector2( 0.3, 0.3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 757, 189 ), Vector2( 765, 205 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "CardsSpawn"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AttackIncrease:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.32, 0.32 ), Vector2( 0.3, 0.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackIncrease:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 109, 701 ), Vector2( 109, 165 ), Vector2( 109, 205 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AttackIncrease")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("HealthIncrease")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HealthIncrease:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 437, 701 ), Vector2( 437, 181 ), Vector2( 437, 205 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HealthIncrease:rect_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.323, 0.323 ), Vector2( 0.3, 0.3 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("SpeedIncrease")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SpeedIncrease:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 765, 701 ), Vector2( 765, 165 ), Vector2( 765, 205 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("SpeedIncrease:rect_scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.33, 0.33 ), Vector2( 0.3, 0.3 ) ]
}
tracks/9/type = "method"
tracks/9/path = NodePath("Label")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Label:rect_position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 60, -116 ), Vector2( 60, 100 ), Vector2( 60, 84 ), Vector2( 60, 100 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AttackIncrease:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackIncrease:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 910, 1118 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackIncrease:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 109, 205 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HealthIncrease:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 437, 205 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HealthIncrease:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SpeedIncrease:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 765, 205 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SpeedIncrease:rect_scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Label:rect_scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Label:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 60, 100 ) ]
}

[node name="CanvasLayer" type="CanvasLayer"]
layer = 100

[node name="CardSelector" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="CardSelector"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )

[node name="Label" type="Label" parent="CardSelector"]
margin_left = 60.0
margin_top = 100.0
margin_right = 1093.23
margin_bottom = 158.0
theme = SubResource( 2 )
text = "CHOOSE AN UPGRADE TO BATTLE YOUR OPPONENTS"
align = 1
valign = 1

[node name="AttackIncrease" type="TextureButton" parent="CardSelector"]
margin_left = 109.0
margin_top = 205.0
margin_right = 1019.0
margin_bottom = 1323.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 1 )

[node name="AttackIncreaseHover" type="AnimationPlayer" parent="CardSelector/AttackIncrease"]
anims/AttackIncreaseHover = SubResource( 5 )
anims/AttackIncreaseHoverOff = SubResource( 11 )
anims/RESET = SubResource( 6 )

[node name="HealthIncrease" type="TextureButton" parent="CardSelector"]
margin_left = 437.0
margin_top = 205.0
margin_right = 1347.0
margin_bottom = 1323.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )

[node name="HealthIncreaseHover" type="AnimationPlayer" parent="CardSelector/HealthIncrease"]
anims/HealthIncreaseHover = SubResource( 7 )
anims/HealthIncreaseHoverOff = SubResource( 12 )
anims/RESET = SubResource( 8 )

[node name="SpeedIncrease" type="TextureButton" parent="CardSelector"]
margin_left = 765.0
margin_top = 205.0
margin_right = 1675.0
margin_bottom = 1323.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="SpeedIncreaseHover" type="AnimationPlayer" parent="CardSelector/SpeedIncrease"]
anims/RESET = SubResource( 9 )
anims/SpeedIncreaseHover = SubResource( 10 )
anims/SpeedIncreaseHoverOff = SubResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CardSelector"]
playback_speed = 0.5
anims/CardsSpawn = SubResource( 3 )
anims/RESET = SubResource( 4 )

[connection signal="button_down" from="CardSelector/AttackIncrease" to="CardSelector" method="_on_AttackIncrease_button_down"]
[connection signal="mouse_entered" from="CardSelector/AttackIncrease" to="CardSelector" method="_on_AttackIncrease_mouse_entered"]
[connection signal="mouse_exited" from="CardSelector/AttackIncrease" to="CardSelector" method="_on_AttackIncrease_mouse_exited"]
[connection signal="pressed" from="CardSelector/AttackIncrease" to="CardSelector" method="_on_AttackIncrease_pressed"]
[connection signal="button_down" from="CardSelector/HealthIncrease" to="CardSelector" method="_on_HealthIncrease_button_down"]
[connection signal="mouse_entered" from="CardSelector/HealthIncrease" to="CardSelector" method="_on_HealthIncrease_mouse_entered"]
[connection signal="mouse_exited" from="CardSelector/HealthIncrease" to="CardSelector" method="_on_HealthIncrease_mouse_exited"]
[connection signal="pressed" from="CardSelector/HealthIncrease" to="CardSelector" method="_on_HealthIncrease_pressed"]
[connection signal="button_down" from="CardSelector/SpeedIncrease" to="CardSelector" method="_on_SpeedIncrease_button_down"]
[connection signal="mouse_entered" from="CardSelector/SpeedIncrease" to="CardSelector" method="_on_SpeedIncrease_mouse_entered"]
[connection signal="mouse_exited" from="CardSelector/SpeedIncrease" to="CardSelector" method="_on_SpeedIncrease_mouse_exited"]
[connection signal="pressed" from="CardSelector/SpeedIncrease" to="CardSelector" method="_on_SpeedIncrease_pressed"]
